--- a/HW2/index.html
+++ b/HW2/index.html
@@ -26,6 +26,6 @@
 	</ul>
 
 	<a href=" https://yumin0512.github.io/111306068/HW2/secondpage.html">Link to Second Page</a>
-	<a href=" https://yumin0512.github.io/111306068/HW2/thirdpage.html">Link to Second Page</a>
+	<a href=" https://yumin0512.github.io/111306068/HW2/thirdpage.html">Link to third Page</a>
 </body>
 </html>
